* Segfault importing Java code - related to variable length parameters (230770)
* Segmentation fault when trying to generate code (235703)
* Can't uncheck "Show Public Only" (242545)
* Umbrello crashed after copy/paste (243392) 
* Crash when opening file (251094) 
* Crashes even if an association was drawn (271243)
* Gratuitous warning messages on loading project file (283744)
* Crash on importing templated java source code (293770)
* New feature: C# code import added.

Version 2.8.0

* New feature: Code import wizard added
* New feature: Print preview added.
* Made printing border calculation more robust
* Reuse changed printer settings
* Show diagram print settings dialog before print or print preview dialog
* Added msvc2010 preprocesser for idl preprocessing
* Enabling of cut/copy/paste actions is incorrect (70925)
* Segmentation fault when copy&paste of sequence diagram (287179) and therefore also
  - Copy and paste or drag and drop of a java datatype between folders (280770) 
  - crash on copy paste (262842)
  - Crash when copy/paste, from a class tab to an other, 2 linked tables (286449)
  - Cut Class and paste as Entity cause crash (274265)
  - Umbrello crashed when cut/paste (275372)
  - Copy and paste of a class lets Umbrello crash (241915)
  - Copy - paste multiple class operations makes umbrello crash (257410)
  - Umbrello crashes during cut and paste class diagram (257584) 
* Copy/Paste of activity, state and use case diagram elements do not create new elements (291557)
* Crash on new synchronous message in sequence diagram (168752)
* Umbrello crashes with SIGSEGV in Object Flow properties 170596)
* Crash fix in case the path does not fit into the package hierachy we cannot check the imports (200721)
* Crash fix on importing idl file (203092)
* Crash on C++ import with Doxygen: cause Doxygen Braces (228352)
* Crash on new entity (entity relationship model) (259404)
* Umbrello crashed when changing the Package of a class (268469)