@@ -13,6 +13,7 @@ Version 2.8.1
 * Crash when opening file (251094) 
 * Crashes even if an association was drawn (271243)
 * Gratuitous warning messages on loading project file (283744)
+* Creates many 'new_package_xx' packages on file loading (291159)
 * Crash on importing templated java source code (293770)
 * New feature: C# code import added.
 
